# joe-factorial

./: .gitignore  CMakeLists.txt  Factorial.cpp  book.cpp  book.h  dasort.cpp  main.cpp  matrix.cpp  matrix.h  matrixmath.cpp  rectangle.txt  tetrahedron.txt  triangle.txt
include/: factory.h  rectangle.h  rectangle.tcc  rectanglefactory.h  shape.h  shape.tcc  shapefactory.h  shapefactory.tcc  shapehead.h  tet.h  tet.tcc  tetfactory.h  triangle.h  triangle.tcc  trianglefactory.h
src/: main.cpp  rectangle.cpp  shape.cpp  shapefactory.cpp  shapes.cc  tet.cpp  triangle.cpp
